--- a/login.html
+++ b/login.html
@@ -83,13 +83,13 @@
         
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyAwZ5R3vLbUhZ0Ve9xfDplKpLFxn6t8jco",
-            authDomain: "student-management-syste-a8394.firebaseapp.com",
-            projectId: "student-management-syste-a8394",
-            storageBucket: "student-management-syste-a8394.firebasestorage.app",
-            messagingSenderId: "218048562419",
-            appId: "1:218048562419:web:1cd92e1fcd416c5cc96386",
-            measurementId: "G-QX15K5RB8F"
+            apiKey: "#",
+            authDomain: "#",
+            projectId: "#",
+            storageBucket: "#",
+            messagingSenderId: "#",
+            appId: "#",
+            measurementId: "#"
         };
 
         // Initialize Firebase
